src/objects/PaymentHW__c.object
<CustomObject>
    <description>Payment custom object for homework #2</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PaymentsHW</relationshipLabel>
        <relationshipName>PaymentsHW</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PropertyHW__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PropertyHW</label>
        <referenceTo>PropertyHW__c</referenceTo>
        <relationshipLabel>PaymentsHW</relationshipLabel>
        <relationshipName>PaymentsHW</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Price__c</fullName>
        <formula>PropertyHW__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Fee__c</fullName>
        <formula>Property_Price__c * IF(PropertyHW__r.RecordType.DeveloperName == &quot;Sale&quot;, 0.1, 0.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Real Estate Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payed</fullName>
                </value>
                <value>
                    <fullName>Prepared</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <formula>Property_Price__c * (1 + Real_Estate_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentsHW</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PaymentHW</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PaymentHW Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PaymentsHW</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>